eks-postinstall/manifests/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/group.name: ${group_name}
    alb.ingress.kubernetes.io/group.order: "333"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: ${schema}
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
  name: grafana
  namespace: cattle-monitoring-system
spec:
  rules:
  - host: ${hostname}.${domain}
    http:
      paths:
      - backend:
          service:
            name: rancher-monitoring-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
