eks-postinstall/manifests/internal-load-balance.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: internal-load-balance
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: "${certificate_arn}"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/group.name: internal
    alb.ingress.kubernetes.io/group.order: '1'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    #cert-manager.io/cluster-issuer: letsencrypt-nonprod # This should match the ClusterIssuer created
spec:  
  rules:
    - host: "internal.${hostname}"
      http:
        paths:
          - path: /*
            backend:
              serviceName: internal
              servicePort: 80
