eks-postinstall/manifests/rancher-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: cattle-system
  name: rancher-ingress
  annotations:
    alb.ingress.kubernetes.io/group.name: ${group_name}
    alb.ingress.kubernetes.io/group.order: "20"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: ${schema}
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
spec:  
  rules:
    - host: "${hostname}.${domain}"
      http:
        paths:
          - path: /*
            backend:
              serviceName: rancher
              servicePort: 80
